# tolstokovMaga

./: CMakeLists.txt
bloomFilter/: bloom.cpp  problem  test.cpp
dominantElements/: dominantElements.cpp
externalMultiplication/: externalMultiplication.cpp
externalSort/: exteranlSort.cpp  main (2).cpp  temp.cpp
externalTranspose/: externalTranspose.cpp  problem
krTask1/: task1.cpp  task1_solved.cpp  task2_solved.cpp  task3_solved.cpp
nextAfterNext/: nextAfterNext.cpp
stringAlgorithms/: main.cpp  main2.cpp  main3.cpp  output.txt
